recipe-core/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-core-service
spec:
  selector:
    app: recipe-core
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
